--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     font-family: Consolas, serif, Arial;
+
     color: white;
     box-sizing: border-box;
 }
@@ -30,6 +31,7 @@ button:disabled {
 }
 
 .column {
+    max-height: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -42,17 +44,22 @@ button:disabled {
 
 #botinfo {
     background-color: #3e3e3e;
-    height: 2.5em;
+    min-height: 2em;
     width: 100%;
-
     align-items: center;
     padding: 0 .5em 0 .5em;
 }
 
 
 #botTokenLogin {
-    height: 90%;
-    width: 5em;
+    border-radius: .3em;
+    min-height: 70%;
+    width: 4em;
+}
+
+#content{
+    overflow: hidden;
+    flex-grow: 1;
 }
 
 
@@ -62,6 +69,7 @@ button:disabled {
 }
 
 .tooltip::after {
+    visibility: hidden;
     font-size: .8em;
     position: fixed;
     background: rgba(30, 30, 30, .8);
@@ -76,5 +84,24 @@ button:disabled {
 
 
 .tooltip:hover:after {
+    visibility: visible;
     opacity: 1;
+}
+
+/* width */
+::-webkit-scrollbar {
+    margin-right: 5px;
+    width: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background-color: #4f4f4f;
+    width: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background-color: #3e3e3e;
+    border-radius: 1em;
 }
