--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,8 +1,11 @@
 
 #sidebar{
+    max-height: 100%;
     width: 15em;
-    background-color: #5f5f5f;
+    background-color: #5a5a5a;
 }
+
+
 
 
 
@@ -15,6 +18,7 @@
 #profile-area-img{
 
     margin-left: 1em;
+    border-radius: 2em;
     height: 2em;
     width: 2em;
 }
@@ -39,7 +43,7 @@
 #sidebar-header{
     background-color: #4f4f4f;
     display: flex;
-    height: 2em;
+    height: 32px;
     justify-content: center;
     align-items: center;
     font-size: .9em;
@@ -59,6 +63,7 @@
     width: 100%;
     padding: 0 .5em 0 .5em;
     height: 2em;
+    border-radius: .25em;
     font-size: .9em;
     margin-bottom: .1em;
 
